tests/error/link_absent.tst
123
#rooms
r1 0 0
r2 1 1
r3 2 2
##start
s 4 4
##end
e 5 5
r3 5 6
#links
